fix: confetti on mobile (#109)

--- a/styles/demo.css
+++ b/styles/demo.css
@@ -100,9 +100,13 @@ body.custom-cursor *:not(.rotation-handle.active):not(.piece.active #shape) {
 }
 
 #confetti-container.active {
-  justify-content: space-between;
   display: flex;
-  padding-inline: 20%;
+  justify-content: space-between;
+  position: absolute;
+  top: 0;
+  left: 10vw;
+  right: 0;
+  width: 70%;
 }
 
 #canvases {
